# ChangeLog for dev-python/envoy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/envoy/ChangeLog,v 1.5 2014/03/31 20:29:46 mgorny Exp $

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> envoy-0.0.2-r1.ebuild:
  Add support for the new PyPy slotting.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> envoy-0.0.2-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*envoy-0.0.2-r1 (05 Jun 2013)

  05 Jun 2013; Ian Delaney <idella4@gentoo.org> +envoy-0.0.2-r1.ebuild,
  +files/test_envoy.py:
  revbump, migrate -> distutils-r1

  15 Jan 2012; Torsten Veller <tove@gentoo.org> envoy-0.0.2.ebuild:
  Fix cvs keyword in the header (#398773)

*envoy-0.0.2 (30 Dec 2011)

  30 Dec 2011; Patrick Lauer <patrick@gentoo.org> +envoy-0.0.2.ebuild,
  +metadata.xml:
  Initial import for #396287, ebuild by jbergstroem