@@ -3,26 +3,16 @@ Hash: SHA256
 
 AUX test_envoy.py 1638 SHA256 116be14f752024b42151687ce19748aa6e1f69917c2b502c62217836d4b669b4 SHA512 24951cce4a7d1e8d61f6408458f78b2999aa01de8488b716a2c26b7032ac344e82f62c309a122ebb78306ac5b1b368e97eff96c9c0a954a36aa878f921b21069 WHIRLPOOL 12a385c02d53940c88c9067883316a6aaac627ef1d126435a1ca5110cf759f2f64369acf65080b043355fb19828fb76489424bb0f5b6b33db7996902aa64ea03
 DIST envoy-0.0.2.tar.gz 3347 SHA256 e10aeed89078bb214ff817a189aaf85ab5024025b2e555286872307c9e79b799 SHA512 b13b5499848659322988feb6297e41f3a680f1986f20d741e219319b17b538cd3bdc2c9f060833bf756b4d206b745361a869562d21c9365362f82cd3e14e6901 WHIRLPOOL a240629636fa8906c7b4c1b3c12742922e5ce882644d0dd3d5c7353211ebf7a94ddc386890f0530f96be3fbc4c79a53ebc6c34ed914bdbf267f42d32fb9a3df0
+DIST envoy-0.0.3.tar.gz 4190 SHA256 22b02009cfda2cf2cdb94a75a15ac3fd910aea8685c53e8e03715c7e9d8e8bde SHA512 3af97b95d61f12ef0d8dc71234023a69123667ef26feec9342bda4c3307629728be589be3ac7d118f6cf17aeb6b5ee91c23f37f84c411f117f5e76a5b024a967 WHIRLPOOL fca1eb6de99d90c8c94598bf5524f8ff5e41ab96f5b351e8bcd20cfc729fc8a4f360d744d25f5af4d80dd6b5ad3624a5fb041041268c4ebcf7d5154ccf62db56
 EBUILD envoy-0.0.2-r1.ebuild 923 SHA256 0d78c6a28b3f3e6ebea66e1dd8ecd7b5686abf84df4e6ed5be219c05bad68af4 SHA512 593d99e36aeec22aeab05365611c5f4b31622964db89792bdd21fce5a88f9ef7de57204de029e910f60a7cc1a3c275ff3bd90bb2332b0fdc80fe7b03545bd0aa WHIRLPOOL 80880bb32d1704ae824fd3fb00111704e78982ce08a6ac1bea36fa1403e82a6ae556c71faad4339e771973224959d84e54fe1f439f98f7f07ed21b47b16ac351
 EBUILD envoy-0.0.2.ebuild 857 SHA256 a14919114cd8b921ed51950b719ce99092f96ac384165f658d2301764ff220ec SHA512 15b866d252038aee62201ab0abee66473fdae2ded0c49e30ffababf921968543df71ad45452911779e23c0d9e46a3078505687f1c5134473a8072b14a6179732 WHIRLPOOL 9205d97815c05e1591668c11253f9a6d5a1e536e2b448f29e610b25e9e5e938065c2f240818997129f58053a1296db941468a4c3c9428128ef3c7b4d214e62d4
-MISC ChangeLog 887 SHA256 008b3ad93fbbef4f5bf8e88c57ed8e414ad297b9f42508021a971455ede36a30 SHA512 d6dba91639b6b4b7d5c59c038402202c22036c83627a35d40e48a0649c6b0255aebde73e087eca497d010314d6cb9092a3e2c1fcdc33e5a3ab9ee441d5a5ce84 WHIRLPOOL fa31dea0530a3b990af9b93b570767789ec0a79ca64a56face4512cd722177958049cbc319a64d9a7230a36f01eead1b4a9c66dd76b2345b6b1d6d9792880abf
+EBUILD envoy-0.0.3.ebuild 719 SHA256 3f33e644300b6f9cbdae0486f43fec1bac82e9c33efb24e4188506b6ee7b5f1a SHA512 1e91e40925adc5905053ac7f3aabf3f437e726556de029ca6a533e58785430f3dbc691bbf45666d69fbed69047c4621aa7b114466c818b6b8a262c292e64a833 WHIRLPOOL e577e939ca175e80937c3ae72243c26af4bf416eb1b833b6785a88c1e124060b70118483b7073b47e0cb565813f3579a2cfd2f60af3d1a0ce69f72534e364ed7
+MISC ChangeLog 993 SHA256 a3e209ead1d0e14f6d2183f2930288a22e72ad6f477c57b387dfd97a87a571d4 SHA512 725f44f5864bd1880cf5c640ef02a5846418be853549d8f7d49d8b5e6643dd2c34b5e7c0945830c834ddd4a7f5b53a02ef63835037a3d7250f83f732b6249b4d WHIRLPOOL 6d23192ac92d1f487cbf292fe921614214ce77b5760baf25b12b052e989d308e29f7b1a1956f54a94542a6022e6f2bf18b36c4de6b5fff98099445304622baf8
 MISC metadata.xml 228 SHA256 5d921a21e3a1b3e1c1b7d2dcf01b8c58986f82caa35621f7cce2f03364465389 SHA512 df1eb68db5bf24b20fab15058dab7a8e6fefb305897fc7c57e773c9c17495bcd011b843639d12b3081aa09de99318c8d6183cacf7554e6eedd71b75cedd51ef0 WHIRLPOOL d8b4d918fbb2dad2d12c96cc63144f3475be9b0be3459f4e1bf643868a3513f02db9d55ad8e1873b83d2c93c43235489d2d694212e5bdcc3f30cb923bcb53558
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTOdA9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOilsQANKYIUEGO7mee+q1potPjb/D
-DVKy4w3k2I/p/4w/54Hxz1mrxeLC0OA6Lp0du54lBINFVErcKv2wRhyqXxrulUQ8
-GrvkoUgp1JM0fkRf+iwvSz9tAtN9tVCIsKTMxqMujqGHSorfaO6kmS1KljJTFCeJ
-cIWyTk9Hfjp4LjO1eE90LXb4uFah1pwRsxz+GRlTUe5IVTSOY2H+0SWoH7bgfsMd
-k1dDrNZZ3xsEJ4zgai7IZs5yTAeeC07mkzTD7vGJF1g9fkLBXZ1lG5YB9AU6hUGJ
-sISlM9FAhdinjVpO84GxXh16QuaUtBNqJhLeqFutgTkoGXUfTt9XE8HQSWPAb0/u
-aNJ4c6dUBzWBEzPZ/jJ7eYc/VsymHQEbtlRaoZgZYONzroSVUBY7Zw4dRW7qGG6F
-QNwE+OvfnY3Uh6Ucm4dS19wmGD6ULhHUnnOAHbLS7t/wiEbHqvlgAvFNLqugPtHH
-M4kFd+GvPCnNQ+dU66QijvbDv0nPWtCkd94B8sjbf24IPEjjr7gobm1ekE3/e14r
-jdWS344OXuqPz96xx6N0qCReiBA1vDfbYme1GdjsDgkabou3toV7tgdJQJLVGo74
-0sTIsH+9PqaJRPxSsfArlExSL4lTtPQ5YbSExzinV1fRg6jdk6H73sukDrA7A7bL
-yKGhstE0yWoSm2pSXnXi
-=7nRP
+iEYEAREIAAYFAlPy3C0ACgkQso7CE7gHKw0O+wCeJwpQhFbRvY5aajFjWl4oaAmQ
+msMAnAvnPfUBcCO905CnXDexfV4E6vo5
+=ewZD
 -----END PGP SIGNATURE-----
