@@ -1,0 +1,25 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/envoy/envoy-0.0.3.ebuild,v 1.1 2014/08/19 05:19:01 idella4 Exp $
+
+EAPI=5
+PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy )
+
+inherit distutils-r1
+
+DESCRIPTION="Simple API for running external processes"
+HOMEPAGE="https://github.com/kennethreitz/envoy http://pypi.python.org/pypi/envoy"
+SRC_URI="mirror://pypi/${P:0:1}/${PN}/${P}.tar.gz"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~x86 ~amd64"
+IUSE=""
+
+DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
+RDEPEND=""
+
+python_test() {
+	# and it fails almost all;https://github.com/kennethreitz/envoy/issues/58
+	"${PYTHON}" test_envoy.py
+}
