@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/envoy
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/envoy/ChangeLog,v 1.5 2014/03/31 20:29:46 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/envoy/ChangeLog,v 1.6 2014/08/19 05:19:01 idella4 Exp $
+
+*envoy-0.0.3 (19 Aug 2014)
+
+  19 Aug 2014; Ian Delaney <idella4@gentoo.org> +envoy-0.0.3.ebuild:
+  bump
 
   31 Mar 2014; Michał Górny <mgorny@gentoo.org> envoy-0.0.2-r1.ebuild:
   Add support for the new PyPy slotting.
